Fix Harry Potter flying overlapping the edges in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,16 @@ a {
     100% {top:0px; left: 90%;}
 }
 
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 /* -------------------------------------------------------------------- Game Page */
 /*header section */
 
@@ -344,15 +354,6 @@ font-size: 30px;
     z-index: 2;
   }
   
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
 /* -------------------------------------------------------- footer section */
 footer{
     position: fixed;
@@ -397,10 +398,21 @@ footer{
 
 
 /* -------------------------------------------------------------------- Media queries */
+/* Big devices (Monitor,computer, from 1075px to 768px) */
+@media only screen and (max-width: 1983px) {
+    /* ----------------------- Game Page media queries */
+  @keyframes flying-harry{
+    0% {left:0px; top:0px}
+    25% {top:300px;}
+    50%{top:0px}
+    100% {top:0px; left: 70%;}
+}
+
+}
 
 /* Medium devices (landscape tablets, from 1075px to 768px) */
 @media only screen and (max-width: 1075px) {
-    /* ----------------------- Game Page media queries */
+    /* ----------------------- Home Page media queries */
     #header-instruction-container h2{
         font-size: 30px;
         margin-top: 10%;
